# beats

./: .dockerignore  .env.test  .gitignore  ARCHITECTURE.md  CLAUDE.md  DATA.md  Dockerfile  Makefile  PRIVACY.md  PROGRESS.md  Pipfile  Procfile  README.md  ROADMAP.md  TESTING_ROADMAP.md  cloudbuild.yaml  compose.yml  docker-compose.yml  execute.py  fms.py  lefthook.yml  libnss3-nssdb_3.19.2-1ubuntu1_all.deb  libnss3_3.19.2-1ubuntu1_amd64.deb  log.py  p_time.py  pms.py  ptc.py  pyproject.toml  renovate.json  requirements.txt
.cursor/rules/: project-summary.mdc
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: api.yml  companion.yml  daemon.yml  release-daemon.yml  release-vscode.yml  ui.yml  vscode.yml
api/: .env.example  .env.test  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  cloudbuild.yaml  justfile  pyproject.toml
api/scripts/: dump_openapi.py
api/src/: conftest.py  server.py  test_api.py
api/src/beats/: settings.py  test_auth.py  test_coach.py  test_domain.py
api/src/beats/api/: dependencies.py  errors.py  schemas.py
api/src/beats/api/middleware/: __init__.py  idempotency.py
api/src/beats/api/routers/: __init__.py  account.py  analytics.py  auth.py  auto_start.py  beats.py  biometrics.py  calendar.py  coach.py  daily_notes.py  device.py  export.py  fitbit.py  github.py  intelligence.py  intentions.py  oura.py  planning.py  projects.py  signals.py  webhooks.py
api/src/beats/auth/: __init__.py  session.py  storage.py  webauthn.py
api/src/beats/coach/: README.md  __init__.py  brief.py  chat.py  context.py  gateway.py  memory.py  memory_rewrite.py  prompts.py  repos.py  review.py  tools.py  usage.py
api/src/beats/domain/: __init__.py  analytics.py  calendar.py  exceptions.py  export_signing.py  export_sqlite.py  fitbit.py  github.py  intelligence.py  models.py  oura.py  services.py  utils.py
api/src/beats/infrastructure/: __init__.py  database.py  export_key_repo.py  repositories.py
api/src/beats/migrations/: add_multi_user.py
api/tests/hurl/: analytics.hurl  health.hurl  projects.hurl  timer.hurl  webhooks.hurl
app/: fms.py  log.py  p_time.py  pms.py  spread.py  sync_to_mongo.py
companion/: .metadata  PUBLISHING_ANDROID.md  README.md  pubspec.yaml
companion/android/: settings.gradle.kts
companion/android/app/: build.gradle.kts
companion/ios/Runner/: Info.plist
companion/ios/Runner.xcodeproj/: project.pbxproj
companion/lib/: main.dart
companion/lib/screens/: coach_screen.dart  flow_screen.dart  health_screen.dart  home_screen.dart  intentions_screen.dart  monastic_screen.dart  pairing_screen.dart  qr_pairing_screen.dart  timer_screen.dart
companion/lib/services/: api_client.dart  bundle_label.dart  date_keys.dart  flow_summary.dart  insights_url.dart  launch_insights.dart  mac_ambient.dart  notification_dedupe.dart  notification_dedupe_ring.dart  notification_poller.dart  notifications.dart  qr_pairing.dart  recent_projects.dart  repo_path.dart  secure_store.dart  tag_parsing.dart  token_storage.dart  tray_icon.dart  (+1 more)
companion/linux/: CMakeLists.txt
companion/test/: api_client_test.dart  auto_timer_payload_test.dart  brief_preview_test.dart  bundle_label_test.dart  date_keys_test.dart  drift_app_label_test.dart  flow_summary_test.dart  insights_url_test.dart  notification_dedupe_ring_test.dart  notification_dedupe_test.dart  qr_pairing_test.dart  recent_projects_test.dart  repo_path_test.dart  tag_parsing_test.dart  token_storage_test.dart  tray_icon_test.dart  tray_service_helpers_test.dart  widget_test.dart
companion/web/: index.html  manifest.json
companion/windows/: CMakeLists.txt
daemon/: README.md  go.mod  go.sum
dash/: app.py  engine.py
dash/knowledge_base/: last_activity.py
dash_app/knowledge_base/: backmarket_work_analysis.py
data/: projects.json  settings.json
data/logs/: 15.071x.json  18.031x.json  21W.789x.json  6.005.1x.json  6.005.2x.json  6.008.1x.json  6.034.json  6.431x.json  7.00x.json  AGI.json  CS190.1X.json  CYBER501x.json  DDA691x.json  DDP.json  II-exam.json  Khan.json  MegaDownloader.json  SPD1.json  a7yaa.json  ahyaa_x.json  algo1.json  backmarket.json  cls.json  codeforces.json  cs1156.json  cube.json  datasci101.json  db2.json  djoser.json  edxgator.json  fl_auth_server.json  food_course.json  free_learning.json  freelance.json  funcprog.json  graphics.json  html5-edx.json  javaapplets.json  javaapplets_exam.json  korean.json  (+39 more)
docs/: cgeventtap-cadence.md  companion-roadmap.md  companion-ui-design-roadmap.md  flutter-companion.md  homebrew-tap.md  pete-macos-roadmap.md  vscode-extension.md
integrations/homebrew-formula/: README.md  beatsd.rb
integrations/vscode-beats/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
ops/: Dockerfile  cloudbuild.yaml  compose-ops.yml  docker-compose.yml
service/: Dockerfile  Makefile  README.md  db.py  docker-compose.yml  models.py
src/: .env.example  server.py  settings.py  test_api.py
src/beats/: __init__.py  db.py  db_helpers.py  domain.py  exceptions.py  models.py  settings.py  test_domain.py  test_models.py  validation_models.py
src/ptc/: db_helpers.py  models.py  settings.py
terraform/: .gitignore  README.md  SETUP.md  apis.tf  cloudbuild.tf  cloudflare.tf  cloudrun.tf  locals.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/bootstrap/: main.tf
tests/: tests_functional.py
ui/: .dockerignore  .env.example  .firebaserc  .gitignore  AGENTS.md  CLAUDE.md  README.md  biome.json  cloudbuild.yaml  components.json  firebase.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
ui/client/: global.css  main.tsx
ui/e2e/: app.spec.ts  insights.spec.ts  projects.spec.ts  settings.spec.ts  timer.spec.ts
wall-clock/: README.md  platformio.ini
wall-clock/src/: api_client.cpp  api_client.h  button.cpp  button.h  config.h  eink_display.cpp  eink_display.h  led_strip.cpp  led_strip.h  main.cpp  pomodoro.cpp  pomodoro.h
(+347 files in other folders)
