[project]
name = "beats"
version = "0.3.0"
description = "A way to keep track of how I spend my time"
authors = ["Ahmed Elghareeb <me@rancho.me>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dnspython>=2.7.0",
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pymongo>=4.13.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
]
