[project]
name = "beats"
version = "0.3.0"
description = "A way to keep track of how I spend my time"
authors = [{ name = "Ahmed Elghareeb", email = "a@elghareeb.space" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.52.0",
    "dnspython>=2.7",
    "fastapi>=0.128.0",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.16.0",
    "pyjwt>=2.10.0",
    "python-dotenv>=1.0",
    "httpx>=0.28.1",
    "uvicorn>=0.40.0",
    "webauthn>=2.5.0",
    "python-multipart>=0.0.27",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "ruff>=0.15.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "testcontainers[mongodb]>=4.10.0",
    "ty>=0.0.1a10",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beats"]

[tool.hatch.build.targets.sdist]
include = ["src/beats", "README.md", "LICENSE"]

[tool.ruff]
# Target the runtime set in Docker and CI; ruff uses this to enable proper lint rules.
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.lint]
# A focused, low-noise ruleset: errors (E), pyflakes (F), isort (I), bugbear (B), pyupgrade (UP)
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]  # Allow function calls in defaults (FastAPI Query/Depends pattern)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.ty.rules]
# Suppress false positives from Motor/Pydantic dynamic types until ty matures
unresolved-attribute = "warn"
invalid-argument-type = "warn"
invalid-type-form = "warn"
no-matching-overload = "warn"
missing-argument = "warn"  # pydantic-settings fills required fields from env vars
invalid-yield = "warn"  # Anthropic SDK stream event type mismatch

[tool.pytest.ini_options]
addopts = "-q --cov=beats --cov-fail-under=65"
testpaths = ["src"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
