[project]
name = "beats"
version = "0.3.0"
description = "A way to keep track of how I spend my time"
authors = [{ name = "Ahmed Elghareeb", email = "a@elghareeb.space" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.104.1",
    "dnspython>=2.8.0",
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymongo>=4.17.0",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.1",
    "uvicorn>=0.48.0",
    "webauthn>=2.7.1",
    "python-multipart>=0.0.29",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "ipython>=9.13.0",
    "ruff>=0.15.14",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "testcontainers[mongodb]>=4.14.2",
    "ty>=0.0.39",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beats"]

[tool.hatch.build.targets.sdist]
include = ["src/beats", "README.md", "LICENSE"]

[tool.ruff]
# Target the runtime set in Docker and CI; ruff uses this to enable proper lint rules.
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.lint]
# A focused, low-noise ruleset: errors (E), pyflakes (F), isort (I), bugbear (B), pyupgrade (UP)
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]  # Allow function calls in defaults (FastAPI Query/Depends pattern)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.ty.rules]
# Suppress false positives from Motor/Pydantic dynamic types until ty matures
unresolved-attribute = "warn"
invalid-argument-type = "warn"
invalid-type-form = "warn"
no-matching-overload = "warn"
missing-argument = "warn"  # pydantic-settings fills required fields from env vars
invalid-yield = "warn"  # Anthropic SDK stream event type mismatch

[tool.pytest.ini_options]
addopts = "-q --cov=beats --cov-fail-under=65"
testpaths = ["src"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
